<resources>
    <string name="app_name">AppFA</string>

    <!--LOGIN-->
    <string name="loginFormTitle">App de Fútbol Amateur</string>
    <string name="loginFormUserHint">email*</string>
    <string name="loginFormPasswordHint">contraseña*</string>
    <string name="loginButton">Login</string>
    <string name="loginFormShowPassword">Mostrar contraseña</string>

    <!--REGISTRATION-->
    <string name="registrationTextButton"><u>Registrate</u></string>
    <string name="registrationFullName">nombre*</string>
    <string name="registrationLastName">apellido*</string>
    <string name="registrationUserID">dni*</string>
    <string name="registrationUserName">email*</string>
    <string name="registrationPassword">contraseña*</string>
    <string name="registrationRepeatPassword">repetir contraseña*</string>
    <string name="registrationButton">Registrar</string>

    <!--ERRORS-->
    <string name="error_data_required">Por favor completá todos los campos marcados con <b><i>*</i></b></string>
    <string name="error_passwords_do_not_match">las contraseñas no coinciden</string>
    <string name="error_default_title"><b><i>FOUL!</i></b></string>
    <string name="error_firebase_weak_password">La contraseña es demasiado simple</string>
    <string name="error_firebase_invalid_credentials">Verificá los datos ingresados</string>
    <string name="error_firebase_user_exits">El usuario ya existe</string>
    <string name="error_firebase_generic_error">Error</string>

    <!--DIALOG-->
    <string name="ok_default_button"><b><i>Ok</i></b></string>
    <string name="loadingTitle">Espera un momento&#8230;</string>

    <!--DRAWER-->
    <string name="title_section1">Mis Equipos</string>
    <string name="title_section2">Mis Torneos</string>
    <string name="title_section3">Palmarés</string>
    <string name="title_section4">Cerrar Sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="example_profile">Lionel Messi</string>
    <string name="example_team">Buby\'s</string>
    <!--/DRAWER-->

    <!--EMPTY STATES-->
    <string name="emptyStateTeamTitle"><b><i>¡Aún no perteneces a ningún EQUIPO!</i></b></string>
    <string name="emptyStateTeamSubtitle">Para <b><i>CREAR</i></b> un equipo presioná el botón <b><i>AÑADIR</i></b> o podés <b><i>BUSCAR</i></b> y solicitar unirte (requiere aprobación)</string>
</resources>
