<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".registration.RegistrationActivity">

    <RelativeLayout
        style="@style/RegistrationScreen">

        <TextView
            android:id="@+id/logo"
            style="@style/LoginLogoText"/>

        <LinearLayout
            android:id="@+id/formContainer"
            style="@style/LoginFormContainer"
            android:layout_below="@+id/logo">

            <EditText
                android:id="@+id/userFullName"
                style="@style/LoginFormDataEditText"
                android:hint="@string/registrationFullName"
                android:inputType="textCapSentences"/>


            <EditText
                android:id="@+id/userLastName"
                style="@style/LoginFormDataEditText"
                android:hint="@string/registrationLastName"
                android:inputType="textCapSentences"/>


            <EditText
                android:id="@+id/userName"
                style="@style/LoginFormDataEditText"
                android:hint="@string/registrationUserName"
                android:inputType="number"/>

            <EditText
                android:id="@+id/userPassword"
                style="@style/LoginFormDataEditText"
                android:hint="@string/registrationPassword"
                android:inputType="textPassword"/>


            <EditText
                android:id="@+id/userRepeatPassword"
                style="@style/LoginFormDataEditText"
                android:hint="@string/registrationRepeatPassword"
                android:inputType="textPassword"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>