<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginScreen"
    android:fillViewport="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            style="@style/MatchParent">

            <TextView
                android:id="@+id/logo"
                style="@style/LoginLogoText"/>

            <TextView
                android:id="@+id/subtitle"
                style="@style/LoginFormTitle"
                android:layout_below="@+id/logo"/>

            <LinearLayout
                android:id="@+id/formContainer"
                style="@style/LoginFormContainer"
                android:layout_below="@+id/subtitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_with_layout"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/loginFormDataContainerHeight"
                        android:layout_height="@dimen/loginFormDataContainerImageSize"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_email"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparent"/>

                    <EditText
                        android:id="@+id/userName"
                        style="@style/LoginFormDataEditText"
                        android:hint="@string/loginFormUserHint"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_with_layout"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/loginFormDataContainerHeight"
                        android:layout_height="@dimen/loginFormDataContainerImageSize"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_password"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparent"/>

                    <EditText
                        android:id="@+id/userPassword"
                        style="@style/LoginFormDataPasswordEditText"
                        android:hint="@string/loginFormPasswordHint"/>
                </LinearLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/showPassword"
                    style="@style/LoginFormShowPassword"
                    app:buttonTint="@color/colorWhite"/>


                <Button
                    android:id="@+id/loginUser"
                    style="@style/LoginFormButton"
                    android:text="@string/loginButton"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorWhite"/>

                <Button
                    android:id="@+id/registrationButton"
                    style="@style/LoginFormButton"
                    android:text="@string/registrationButton"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</ScrollView>